# web_info

./: .env  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/: config.py  main.py
src/models/: request.py  response.py
src/routes/: website_info.py
src/services/: auth.py  web_info.py
src/utils/: llm.py  web_scraper.py
